--- a/pages/roomDetail/roomDetail.wxss
+++ b/pages/roomDetail/roomDetail.wxss
@@ -45,3 +45,10 @@
 .round-child{
     display:inline-block
 }
+
+.refresh{
+
+  margin-right:300rpx;
+  background: blue !important;
+  color:#fff;
+}
