--- a/pages/roomDetail/roomDetail.wxml
+++ b/pages/roomDetail/roomDetail.wxml
@@ -1,9 +1,10 @@
 <!--pages/roomDetail/roomDetail.wxml-->
 
-<modal modalHidden="{{modalHidden}}" title="赢了多少？赌神"
+<modal modalHidden="{{modalHidden}}" title="赢了多少？赌神" inType='number'
     bind:sureEvent='_sureEvent'/>
 
 <view class='newRoom'>
+<view class='add refresh' bindtap='refresh'>刷新</view>
 <view class='add' bindtap='newRound'>局结</view>
 </view>
 
